--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^7.8.0",
     "axios": "^0.19.2",
     "cheerio": "^1.0.0-rc.3",
     "next": "9.5.2",
