--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
     "@elastic/elasticsearch": "^7.8.0",
+    "@zeit/next-css": "^1.0.1",
+    "@zeit/next-less": "^1.0.1",
+    "@zeit/next-sass": "^1.0.1",
+    "antd": "^4.5.4",
     "axios": "^0.19.2",
+    "babel-plugin-import": "^1.13.0",
     "cheerio": "^1.0.0-rc.3",
+    "less": "^3.12.2",
     "next": "9.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1"
