--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cheerio": "^1.0.0-rc.3",
     "less": "^3.12.2",
     "next": "9.5.2",
+    "next-auth": "^3.1.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-image": "^4.0.3",
