--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "jewellery",
   "version": "0.1.0",
-  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -10,6 +9,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.2.2",
     "@elastic/elasticsearch": "^7.8.0",
+    "@hookform/resolvers": "^0.1.0",
     "@zeit/next-css": "^1.0.1",
     "@zeit/next-less": "^1.0.1",
     "@zeit/next-sass": "^1.0.1",
@@ -22,10 +22,12 @@
     "next-auth": "^3.1.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-hook-form": "^6.5.0",
     "react-image": "^4.0.3",
     "react-number-format": "^4.4.1",
     "react-resize-detector": "^5.0.7",
     "react-visibility-sensor": "^5.1.1",
-    "swr": "^0.3.0"
+    "swr": "^0.3.0",
+    "yup": "^0.29.3"
   }
 }
